--- a/BuyMeACoffee/client/src/index.css
+++ b/BuyMeACoffee/client/src/index.css
@@ -1,11 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Yanone+Kaffeesatz&display=swap');
 
 
-.cen {
-    font-size: larger;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    position: relative;
-    margin-top: 300px;
+*{margin: 0%;
+
 }
 
+.main {
+    
+}
+
+.account {
+    width: 100%;
+    font-size: 30px;
+    margin: 0 auto;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+
+}
